src/objects/DE_Service_Billing__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FileId__c</fullName>
        <label>FileId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Version</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkOrder__c</fullName>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Service Billings</relationshipLabel>
        <relationshipName>Service_Billings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Service Billing</label>
    <nameField>
        <label>Service Billing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Billings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>